# clasq

./: .gitignore  .gitmodules  LICENSE  README.md  pytest.ini  setup.cfg  setup.py
clasq/: errors.py
clasq/connection/: connection.py  errors.py  prepared_stmt.py
clasq/data/: database.py  table_record.py
clasq/schema/: column.py  database.py  sqltypes.py  table.py  view.py
clasq/syntax/: data_types.py  exprs.py  functions.py  query.py  query_data.py  sql_parse.py  sql_values.py  values.py
clasq/utils/: annotate.py  class_vars_list.py  name_conversion.py  tabledata.py  typed_generic.py
libsql/: __init__.py  connector.py  database.py  dataclass.py  dataview.py  executor.py  meta.py  result.py  schema.py  view.py
libsql/connection/: __init__.py  connection.py  connection_abc.py  errors.py  mysql_connection.py  prepared_connection_abc.py  prepared_stmt.py
libsql/data/: database.py  record_abc.py  table_record.py
libsql/schema/: column.py  column_abc.py  database.py  database_abc.py  fkey_ref.py  sqltype_abc.py  sqltypes.py  table.py  table_abc.py  view.py  view_abc.py
libsql/syntax/: errors.py  expr_abc.py  expr_class.py  expr_maker.py  expr_type.py  exprs.py  format.py  keywords.py  (+14 more)
samples/: sample01.py
src/: connector.py  cursor.py  dataclass.py  executor.py  expression.py  fmt.py  format.py  keywords.py  query.py  record.py  result.py  schema.py  sqlexpr.py  sqltypebases.py  sqltypes.py  view.py
tests/: create_db.py  dbconfig.py  test_connection.py  test_create.py  test_schema.py  test_select.py  test_view.py  test_view_column.py  test_view_join.py
(+64 files in other folders)
