[metadata]
name = libsql
version = 0.3.0
url = https://github.com/masaharu-kato/libsql
author = Masaharu Kato
author_email = fudai.mk@gmail.com
license_file = LICENSE
description = Python SQL Utilities
long_description = file: README.md

[options]
zip_safe = False
package_dir = 
packages = find:
include_package_data = True
install_requires =
    pyyaml
    mysql-connector-python==8.0.12
    sqlparse
setup_requires = 
    pytest-runner
tests_require = 
    pytest
    pytest-cov
entry_points = file: entry_points.cfg

[options.extras_require]
dev =
    pytest
    pylint
    mypy

[aliases]
test = pytest
